--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,110 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* {
+  box-sizing: content-box;
+}
+
+#home-button{
+    text-align: left;
+}
+
+.site-title{
+    font-family: "Candara";
+    color: #444;
+    line-height: 54px;
+    text-align: center;
+    margin: 0.5em 0;
+    font-size: 3em;
+    font-weight: 300;
+}
+
+body {
+  background: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
+    color: #888;
+    text-align: left;
+}
+
+nav {
+  font-size: 15px;
+  background-color: #DEDEDE;
+  text-align: left;
+  padding-right: 50px;
+  padding: 5px;
+}
+
+nav a {
+  padding: 0 10px;
+}
+.box {
+  background: white;
+  display: inline;
+  border: 1px solid black;
+  margin-left: 20px;
+  margin-top: 8%;
+  width: 300px;
+  height: 300px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right:0;
+    z-index: 1000;
+    background: #1f8dd6;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    color: black;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 200;
+  color: #888;
+  text-align: left;
+}
+
+.standard-form{
+    display: block;
+    clear: left;
+    width: 300px;
+    text-align: left;
+    padding: 10px;
+    border:1px solid black;
+    margin: 40px;
+  }
+
+label {
+  padding:10px
+}
+
+input {
+  margin:10px
+}
+
+.all-products, .all-reviews, .product-list {
+  margin: 20px;
+}
+.one-review {
+  border-top: 1px solid black;
+  padding: 30px 10px 0px 10px;
+}
+.product-info {
+  margin: 20px 40px;
+}
+ .reviewer {
+  font-style: italic;
+  font-size: 10px;
+}
+
+.public-nav {
+  margin-left: 70%;
+  display: inline;
+}
+.public-nav form {
+  display: inline;
+}
+
+img {
+  margin: 0 40%;
+  width: 15%;
+  height: 10%;
+}
