--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,32 @@
   </head>
 
   <body>
+
+    <header class="nav-bar-container">
+      <h1>BuiltSmart</h1>
+       <nav class='nav-bar'>
+         <% if login? %>
+           <span class="nav-links">
+             <%= link_to 'Logout', session_path(current_user),
+             method: :delete %>
+             <%= link_to 'Profile', user_path(current_user) %>
+           </span>
+         <% else %>
+           <div class="nav-links">
+             <%= link_to 'Login', login_path %>
+             <%= link_to 'Sign Up', new_user_path %>
+           </div>
+         <% end %>
+         <span class="public-nav">
+          <%=link_to 'Home', root_path %>
+          <%=link_to 'All Furniture', products_path %>
+          <%= form_tag search_path, :method => "get", id: "search-form" do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search furniture", id: "search" %>
+          <% end %>
+        </span>
+     </nav>
+   </header>
+
     <%= yield %>
   </body>
 </html>
