--- a/app/views/reviews/_index.html.erb
+++ b/app/views/reviews/_index.html.erb
@@ -1,2 +1,7 @@
-<h1>Reviews#_index</h1>
-<p>Find me in app/views/reviews/_index.html.erb</p>
+<div class="all-reviews">
+  <h3>Reviews for <%=product.name%></h3>
+  <%product.reviews.each do |review|%>
+    <%= render partial: "reviews/show", locals: {review: review}%>
+    <br>
+  <%end%>
+</div>
