--- a/app/views/reviews/_new.html.erb
+++ b/app/views/reviews/_new.html.erb
@@ -1,2 +1,11 @@
-<h1>Reviews#_new</h1>
-<p>Find me in app/views/reviews/_new.html.erb</p>
+<div class="standard-form">
+  <%=form_for :review, url: "/products/#{@product.id}/reviews" do |f| %>
+  <p>
+    <%= f.label :review %><br>
+    <%= f.text_area :review %><br>
+    <%=f.select :difficulty_rating, options_for_select(1..5), {prompt: "Select difficult rating"}%>
+    <%= f.hidden_field :user_id, value: current_user.id  %>
+    <%= f.submit "Submit"%><br>
+  </p>
+  <%end%>
+</div>
