--- a/app/views/reviews/_show.html.erb
+++ b/app/views/reviews/_show.html.erb
@@ -1,2 +1,17 @@
-<h1>Reviews#_show</h1>
-<p>Find me in app/views/reviews/_show.html.erb</p>
+<div class="one-review">
+  <%=review.review%><br>
+  <p>Difficulty Rating:<%=review.difficulty_rating%></p>
+  <p class="reviewer">Reviewed by <%=review.reviewer.first_name%> on <%=review.created_at.to_datetime.in_time_zone("Central Time (US & Canada)").strftime("%A, %d %b %Y")%></p>
+  <div class="edit-review">
+    <%if current_user%>
+      <%if authorized?(review.user_id)%>
+       <%=form_tag("/products/#{@product.id}/reviews/#{review.id}/edit", :method => :get) do  %>
+        <%=submit_tag "Edit Review" %>
+       <%end%>
+       <%=form_tag("/products/#{@product.id}/reviews/#{review.id}", :method => :delete) do  %>
+        <%= submit_tag "Delete" %>
+       <%end%>
+      <%end%>
+    <%end%>
+  </div>
+ </div>
