--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<section class="standard-form">
+  <%= render partial: "partials/errors"%>
+  <%= form_for @user do  |f| %>
+    <%= f.label :full_name %><br>
+    <%= f.text_field :full_name %>
+    <br>
+    <%= f.label :email %><br>
+    <%= f.email_field :email %>
+    <br>
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+    <br>
+    <%= f.submit %>
+  <%end%>
+</section>
