Edit to correct nil class error for routes

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="all-products">
   <%@products.each do |product|%>
-    <%=link_to "#{product.name}", product_path(product.id) %><br>
+    <%=link_to "#{product.title}", product_path(product.id) %><br>
   <%end%>
 </div>
