--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,7 +1,7 @@
 <div class="product-list">
   <% @products.each do |product|%>
   <div class="products">
-    <%= link_to "#{product.name}" , product_path(product.id) %>
+    <%= link_to "#{product.title}" , product_path(product.id) %>
   </div>
   <% end %>
 </div>
