--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,19 @@
-<h1><%=@user.first_name.capitalize%>'s Profile Page</h1>
+<h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
 
 <div class="user-bookmarks">
-  <h3><%=@user.first_name.capitalize%>'s Bookmarks</h3>
+  <h3><%=@user.full_name.capitalize%>'s Bookmarks</h3>
   <ul>
     <%@user.products.each do |product|%>
-    <li><%=link_to "#{product.name}", product_url(product.id)%></li>
+    <li><%=link_to "#{product.title}", product_url(product.id)%></li>
     <%end%>
   </ul>
 </div>
 
 <div class="user-reviews">
-  <h3><%=@user.first_name.capitalize%>'s Reviews and Ratings</h3>
+  <h3><%=@user.full_name.capitalize%>'s Reviews and Ratings</h3>
 <ul>
   <%@user.reviews.each do |review|%>
-  <h4><%=link_to "#{review.product.name}", product_path(review.product.id)%>
+  <h4><%=link_to "#{review.product.title}", product_path(review.product.id)%>
   - <%=review.difficulty_rating%></h4>
   <br>
   <%end%>
