--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,118 +1,193 @@
+/* layout/general */
+
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-#home-button{
-    text-align: left;
+body, html {
+  height: 100%;
+  width: 100%;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-.site-title{
-    font-family: "Candara";
-    color: #444;
-    line-height: 54px;
-    text-align: center;
-    margin: 0.5em 0;
-    font-size: 3em;
-    font-weight: 300;
-}
-
-body {
-  background: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 200;
-    color: #888;
-    text-align: left;
+.container {
+  margin: 0 auto;
+  width: 1000px;
 }
 
 nav {
-  font-size: 15px;
-  background-color: #DEDEDE;
-  text-align: left;
-  padding-right: 50px;
-  padding: 5px;
+  background-color: #444;
+  width: 100%;
+  height: 60px;
 }
 
-nav a {
-  padding: 0 10px;
-}
-.box {
-  background: white;
-  display: inline;
-  border: 1px solid black;
-  margin-left: 20px;
-  margin-top: 8%;
-  width: 300px;
-  height: 300px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right:0;
-    z-index: 1000;
-    background: #1f8dd6;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    color: black;
+nav.nav-bar div {
+  line-height: 60px;
 }
 
-p {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-  color: #888;
-  text-align: left;
+nav .brand {
+  font-size: 30px;
+  font-family: 'Righteous', cursive;
 }
 
-.standard-form{
-    display: block;
-    clear: left;
-    width: 300px;
-    text-align: left;
-    padding: 10px;
-    border:1px solid black;
-    margin: 40px;
-  }
-
-label {
-  padding:10px
+nav .brand span {
+  color: #DB5800;
 }
 
-input {
-  margin:10px
+nav .brand a {
+  color: white;
+  text-decoration: none;
 }
 
-.all-products, .all-reviews, .product-list {
-  margin: 20px;
-}
-.one-review {
-  border-top: 1px solid black;
-  padding: 30px 10px 0px 10px;
-}
-.product-info {
-  margin: 20px 40px;
-}
- .reviewer {
-  font-style: italic;
-  font-size: 10px;
+nav span.nav-links {
+  float: right;
 }
 
-.public-nav {
-  margin-left: 70%;
-  display: inline;
-}
-.public-nav form {
-  display: inline;
-}
-
-img {
-  margin: 0 40%;
-  width: 15%;
-  height: 10%;
+nav span.nav-links a {
+  padding: 10px;
+  height: 40px;
+  color: white;
+  text-decoration: none;
 }
 
-.upc-manual-list {
-  margin:20px;
+nav span.nav-links a:hover {
+  background-color: #DB5800;
 }
 
-.upc-manual-list p{
-  font-weight: bold;
+nav span.nav-links {
+  margin: 0 10px;
 }
+
+nav #search-form {
+  display: inline-block;
+  position: relative;
+}
+
+nav #search-form input[type="text"] {
+  height: 35px;
+  padding: 15px;
+}
+
+nav #search-form i.fa-search {
+  color: #444;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+
+/*#home-button{*/
+/*    text-align: left;*/
+/*}*/
+
+/*.site-title{*/
+/*    font-family: "Candara";*/
+/*    color: #444;*/
+/*    line-height: 54px;*/
+/*    text-align: center;*/
+/*    margin: 0.5em 0;*/
+/*    font-size: 3em;*/
+/*    font-weight: 300;*/
+/*}*/
+
+/*body {*/
+/*  background: #fff;*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-weight: 200;*/
+/*    color: #888;*/
+/*    text-align: left;*/
+/*}*/
+
+/*nav {*/
+/*  font-size: 15px;*/
+/*  background-color: #DEDEDE;*/
+/*  text-align: left;*/
+/*  padding-right: 50px;*/
+/*  padding: 5px;*/
+/*}*/
+
+/*nav a {*/
+/*  padding: 0 10px;*/
+/*}*/
+/*.box {*/
+/*  background: white;*/
+/*  display: inline;*/
+/*  border: 1px solid black;*/
+/*  margin-left: 20px;*/
+/*  margin-top: 8%;*/
+/*  width: 300px;*/
+/*  height: 300px;*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    bottom: 0;*/
+/*    right:0;*/
+/*    z-index: 1000;*/
+/*    background: #1f8dd6;*/
+/*    overflow-y: auto;*/
+/*    -webkit-overflow-scrolling: touch;*/
+/*    color: black;*/
+/*}*/
+
+/*p {*/
+/*  font-family: 'Open Sans', sans-serif;*/
+/*  font-weight: 200;*/
+/*  color: #888;*/
+/*  text-align: left;*/
+/*}*/
+
+/*.standard-form{*/
+/*    display: block;*/
+/*    clear: left;*/
+/*    width: 300px;*/
+/*    text-align: left;*/
+/*    padding: 10px;*/
+/*    border:1px solid black;*/
+/*    margin: 40px;*/
+/*  }*/
+
+/*label {*/
+/*  padding:10px*/
+/*}*/
+
+/*input {*/
+/*  margin:10px*/
+/*}*/
+
+/*.all-products, .all-reviews, .product-list {*/
+/*  margin: 20px;*/
+/*}*/
+/*.one-review {*/
+/*  border-top: 1px solid black;*/
+/*  padding: 30px 10px 0px 10px;*/
+/*}*/
+/*.product-info {*/
+/*  margin: 20px 40px;*/
+/*}*/
+/* .reviewer {*/
+/*  font-style: italic;*/
+/*  font-size: 10px;*/
+/*}*/
+
+/*.public-nav {*/
+/*  margin-left: 70%;*/
+/*  display: inline;*/
+/*}*/
+/*.public-nav form {*/
+/*  display: inline;*/
+/*}*/
+
+/*img {*/
+/*  margin: 0 40%;*/
+/*  width: 15%;*/
+/*  height: 10%;*/
+/*}*/
+
+/*.upc-manual-list {*/
+/*  margin:20px;*/
+/*}*/
+
+/*.upc-manual-list p{*/
+/*  font-weight: bold;*/
+/*}*/
