--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,17 +53,40 @@
 
     <%= yield %>
     
-    <footer class="container">
-      <section>
-        <div></div>  
-        <div></div>  
-      </section>
-      
-      <section>
-        <span>©2017 buildsmARt, Inc.</span>
-        <span>Privacy Policy</span>
-        <span>Terms of Services</span>
-      </section>
+    <footer class="">
+      <div class="container">
+        <section class="contacts paddings">
+          <div>
+            <span class="brand">
+              <a href="/">builtsm<span>AR</span>t</a>
+            </span>
+          </div> 
+          <div>
+            <ul>
+              <li class="f-nav-heading">Navigation</li>
+              <li><a href="">About</a></li>
+              <li><a href="">Browse Manuals</a></li>
+              <li><a href="">Login</a></li>
+              <li><a href="">Sign Up</a></li>
+            </ul>
+          </div>  
+          <div>
+            <ul>
+              <li class="f-contacts-heading">Contact Us</li>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">Instagram</a></li>
+              <li><a href="">info@builtsmARt.com</a></li>
+              <li><a href="">212 123 4567</a></li>
+            </ul>
+          </div>  
+        </section>
+        
+        <section class="legal">
+          <span>©2017 buildsmARt, Inc.</span>
+          <span>Privacy Policy</span>
+          <span>Terms of Services</span>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
