--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,37 @@
-<header>
-  <p>Taking the BS out of difficult assembly instructions</p>
-</header>
+<section class="landing">
+  <header class="hero content">
+    <div class="container headline">
+      <p>Your ultimate solution for furniture building. Taking the BS out of difficult assembly instructions</p>
+      <a class="demo-link" href="mailto:info@builtsmart.com?Subject=Demo%20Request">REQUEST DEMO</a>
+    </div>
+  </header>
+</section>
 
-<section>
-  <div class="upc-search">
-    <%= form_tag upcsearch_path, :method => "get", id: "upcsearch-form" do %>
-      <%= text_field_tag :upcsearch, params[:upcsearch], placeholder: "Search furniture by UPC", id: "upcsearch" %>
-    <% end %>
-  </div>
+<section class="intro paddings">
+  <section class="container">
+    <div class="card-container">
+      <div class="cards">
+        <h3>Propreitary Technology</h3>
+        <ul>
+          <li>Bringing visual and auditory step by step instructions to life</li>
+          <li>Using augmented reality on your phone to access 3D directions from physical manual</li>
+          <li>Technology for step by step assembly of funirtures based on 2D visual guide</li>
+        </ul>
+      </div>
+      <div class="cards">
+        <h3>Propreitary Technology</h3>
+        <ul>
+          <li>Bringing visual and auditory step by step instructions to life</li>
+          <li>Using augmented reality on your phone to access 3D directions from physical manual</li>
+          <li>Technology for step by step assembly of funirtures based on 2D visual guide</li>
+        </ul>
+      </div>
+    </div>
+    
+    <div class="upc-search">
+      <%= form_tag upcsearch_path, :method => "get", id: "upcsearch-form" do %>
+        <%= text_field_tag :upcsearch, params[:upcsearch], placeholder: "Search furniture by UPC", id: "upcsearch" %>
+      <% end %>
+    </div>
+  </section>
 </section>
