add style to index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       
       <span class="nav-links">
         <%= form_tag search_path, :method => "get", id: "search-form" do %>
-          <%= text_field_tag :search, params[:search], placeholder: "Search furniture", id: "search" %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search furniture manuals", id: "search" %>
           <i class="fa fa-search" aria-hidden="true"></i>
         <% end %>
       </span>
@@ -60,6 +60,7 @@
             <span class="brand">
               <a href="/">builtsm<span>AR</span>t</a>
             </span>
+            <p class="brand-message">buildsmARt is the leader in Enterprise Augmented Reality Solutions.</p>
           </div> 
           <div>
             <ul>
