--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -96,6 +96,10 @@ footer .contacts div{
   margin: 0px 5px;
 }
 
+footer .contacts .brand-message {
+  margin-top: 20px;
+}
+
 
 footer .contacts li.f-nav-heading {
   text-align: center;
@@ -124,7 +128,6 @@ footer .contacts li.f-contacts-heading {
   text-align: center;
   background-color: #008F68;
   padding: 10px;
-  
 }
 
 footer .legal {
@@ -188,6 +191,52 @@ footer .legal span {
 
 .intro {
   min-height: 100px;
+}
+
+.intro .title {
+  text-align: center;
+  margin: 0 auto 20px;
+  padding: 20px;
+  width: 480px;
+  border-bottom: 1px #444 solid;
+}
+
+.intro .card-container {
+  display: flex;
+  width: 100%;
+}
+
+.intro .cards {
+  padding: 30px 40px;
+  width: 50%;
+}
+
+.intro .cards .icon {
+    text-align: left;
+    font-size: 55px;
+    padding-bottom: 10px;
+}
+
+.intro .cards h3 {
+  padding-bottom: 10px;
+}
+
+.intro .cards li {
+  padding-bottom: 10px;
+}
+
+.intro .upc-search {
+  text-align: center;
+  padding: 30px 0px 20px;
+  margin-top: 20px;
+  border-top: 1px #444 solid;
+}
+
+.intro .upc-search form input[type="text"] {
+  margin-top: 30px;
+  width: 70%;
+  padding: 20px;
+  font-size: 25px;
 }
 
 /*#home-button{*/
