--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,6 +239,40 @@ footer .legal span {
   font-size: 25px;
 }
 
+.standard-form {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+.standard-form input {
+  display: inline-block;
+  padding: 10px;
+  width: 300px;
+  margin: 10px;
+}
+
+.standard-form input[type="submit"] {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.standard-form input[type="submit"]:hover {
+  background-color: #DB5800;
+  color: white;
+}
+
+.standard-form form {
+  text-align: center;
+  margin: 0 auto;
+  width: 350px;
+}
+
+.standard-form h3 {
+  padding: 20px 0px;
+  font-size: 30px;
+  text-align: center;
+}
+
 /*#home-button{*/
 /*    text-align: left;*/
 /*}*/
