--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,10 @@
-<section class="standard-form">
+<section class="standard-form container">
   <%= render partial: "partials/errors"%>
   <%= form_for @user do  |f| %>
-    <%= f.label :full_name %><br>
-    <%= f.text_field :full_name %>
-    <br>
-    <%= f.label :email %><br>
-    <%= f.email_field :email %>
-    <br>
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-    <br>
+    <h3>Sign Up</h3>
+    <%= f.text_field :full_name, placeholder: "Full Name" %>
+    <%= f.email_field :email, placeholder: "Email" %>
+    <%= f.password_field :password, placeholder: "Password" %>
     <%= f.submit %>
   <%end%>
 </section>
