--- a/app/views/reviews/_show.html.erb
+++ b/app/views/reviews/_show.html.erb
@@ -1,6 +1,6 @@
 <div class="one-review">
-  <%=review.review%><br>
-  <p>Difficulty Rating:<%= review.difficulty_rating %></p>
+  <p class="review"><%=review.review%></p>
+  <p class="difficult">Difficulty Rating:<span><%= review.difficulty_rating %></span></p>
   <p class="reviewer">Reviewed by <%= review.user.full_name %> on <%= review.created_at.to_datetime.in_time_zone("Central Time (US & Canada)").strftime("%A, %d %b %Y") %></p>
   <div class="edit-review">
     <%if current_user%>
