--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,26 @@
-<section class="padding-top container"> 
-  <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
-  
-  <div class="user-bookmarks">
-    <h3><%=@user.full_name.capitalize%>'s Bookmarks</h3>
-    <ul>
-      <%@user.products.each do |product|%>
-      <li><%=link_to "#{product.title}", product_url(product.id)%></li>
-      <%end%>
-    </ul>
-  </div>
-  
-  <div class="user-reviews">
-    <h3><%=@user.full_name.capitalize%>'s Reviews and Ratings</h3>
-    <ul>
-      <%@user.reviews.each do |review|%>
-      <h4><%=link_to "#{review.product.title}", product_path(review.product.id)%>
-      - <%=review.difficulty_rating%></h4>
-      <br>
-      <%end%>
-    </ul>
-  </div>
+<section class="padding-top container">
+  <section class="w">
+    <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
+    
+    <div class="user-bookmarks">
+      <h3><%=@user.full_name.capitalize%>'s Bookmarks</h3>
+      <ul>
+        <%@user.products.each do |product|%>
+        <li><%=link_to "#{product.title}", product_url(product.id)%></li>
+        <%end%>
+      </ul>
+    </div>
+    
+    <div class="user-reviews">
+      <h3><%=@user.full_name.capitalize%>'s Reviews and Ratings</h3>
+      <ul>
+        <%@user.reviews.each do |review|%>
+        <h4><%=link_to "#{review.product.title}", product_path(review.product.id)%>
+        - <%=review.difficulty_rating%></h4>
+        <br>
+        <%end%>
+      </ul>
+    </div>
+  </section>
 </section>
 
