--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <section class="padding-top container">
-  <section class="w">
+  <section class="user-profile">
     <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
     
     <div class="user-bookmarks">
-      <h3><%=@user.full_name.capitalize%>'s Bookmarks</h3>
+      <h3>Bookmarks</h3>
       <ul>
         <%@user.products.each do |product|%>
         <li><%=link_to "#{product.title}", product_url(product.id)%></li>
@@ -12,12 +12,11 @@
     </div>
     
     <div class="user-reviews">
-      <h3><%=@user.full_name.capitalize%>'s Reviews and Ratings</h3>
+      <h3>Reviews and Ratings</h3>
       <ul>
         <%@user.reviews.each do |review|%>
-        <h4><%=link_to "#{review.product.title}", product_path(review.product.id)%>
-        - <%=review.difficulty_rating%></h4>
-        <br>
+        <li><%=link_to "#{review.product.title}", product_path(review.product.id)%>
+        - <%=review.difficulty_rating%></li>
         <%end%>
       </ul>
     </div>
