modify css with new hero image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -156,7 +156,7 @@ footer .legal span {
 }
 
 .landing header.hero {
-  background-image: url("bg.png");
+  background-image: url("https://wallpaperscraft.com/image/background_tools_drawings_patterns_18527_960x544.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
