Add link to iOS app

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
-
+<a href="ibuiltbanner://">Use AR with our app!</a><br/>
 <div class="user-bookmarks">
   <h3><%=@user.full_name.capitalize%>'s Bookmarks</h3>
   <ul>
