--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,9 @@
   <section class="user-profile">
     <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
 
-
-  <a href="ibuiltbanner://">Use AR with our app!</a><br/>
-  
+  <div class="ar-link">
+    <a href="ibuiltbanner://">Use AR with our app!</a><br/>
+  </div>
     <div class="user-bookmarks">
       <h3>Bookmarks</h3>
       <ul>
