--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -411,3 +411,46 @@ footer .legal span {
 .user-profile .ar-link a:hover {
   background-color: #DB5800;
 }
+
+/* review */
+.edit-review {
+  padding-bottom: 50px;
+}
+
+.edit-review {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.new-review-form h3 {
+  padding-bottom: 20px;
+}
+
+.new-review-form textarea {
+  width: 250px;
+  height: 100px;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.new-review-form select {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.new-review-form label {
+  margin-bottom: 10px;  
+  display: inline-block;
+  font-size: 13px;
+}
+
+.new-review-form input[type="submit"] {
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: white;
+}
+
