--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,10 +1,17 @@
-<%= render partial: "partials/errors"%>
-<div class="new-review-form">
-  <%=form_for :review, url: "/products/#{@product.id}/reviews/#{@review.id}",  method: :put do |f| %>
-    <%= f.label :review %><br>
-    <%= f.text_area :review, value: @review.review%><br>
-    <%=f.select :difficulty_rating, options_for_select(1..5), {prompt: "Select difficulty rating"}%>
-    <%= f.hidden_field :user_id, value: current_user.id  %>
-    <%= f.submit "Submit"%><br>
-  <%end%>
-</div>
+<section class="padding-top container">
+  <section class="edit-review">
+    
+    <%= render partial: "partials/errors"%>
+    <div class="new-review-form">
+      <h3>Edit Review</h3>
+      <%=form_for :review, url: "/products/#{@product.id}/reviews/#{@review.id}",  method: :put do |f| %>
+        <textarea name="review[review]" id="review_review"><%= @review.review %></textarea>
+        <%= f.label :difficulty_rating %>
+        <%=f.select :difficulty_rating, options_for_select(1..5), {prompt: "Select difficulty rating"}%>
+        <%= f.hidden_field :user_id, value: current_user.id  %>
+        <%= f.submit "Submit"%>
+      <%end%>
+    </div>
+    
+  </section>
+</section>
