--- a/app/views/reviews/_new.html.erb
+++ b/app/views/reviews/_new.html.erb
@@ -2,7 +2,7 @@
   <%=form_for :review, url: "/products/#{@product.id}/reviews" do |f| %>
   <p>
     <%= f.label :review %><br>
-    <%= f.text_area :review %><br>
+    <%= f.text_area :review, placeholder: "Write a review on the difficulty of building this furniture" %><br>
     <%=f.select :difficulty_rating, options_for_select(1..5), {prompt: "Select difficult rating"}%>
     <%= f.hidden_field :user_id, value: current_user.id  %>
     <%= f.submit "Submit"%><br>
