add icon to title bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/16564-200.png" />
     <title>builtsmARt</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
