add reponsiveness to builtsmart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/16564-200.png" />
     <title>builtsmARt</title>
     <%= csrf_meta_tags %>
@@ -48,6 +49,40 @@
       <span class="nav-links">
       <%=link_to 'Browse Manuals', products_path %>
       </span>
+      
+      <!-- mobile -->
+    
+      <span class="m-nav-links">
+        <%= form_tag search_path, :method => "get", id: "search-form" do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search furniture manuals", id: "search" %>
+          <i class="fa fa-search" aria-hidden="true"></i>
+        <% end %>
+      </span>
+      
+      <section class="mobile-nav">
+        <% if login? %>
+          <span class="m-nav-links">
+           <%= link_to 'Logout', session_path(current_user),
+           method: :delete %>
+          </span>
+          
+          <span class="m-nav-links">
+           <%= link_to 'Profile', user_path(current_user) %>
+          </span>
+        <% else %>
+          <span class="m-nav-links">
+           <%= link_to 'Login', login_path %>
+          </span>
+          
+          <span class="m-nav-links">
+           <%= link_to 'Sign Up', new_user_path %>
+          </span>
+        <% end %>
+      
+        <span class="m-nav-links">
+        <%=link_to 'Browse Manuals', products_path %>
+        </span>
+      </section>
     
     </div>
   </nav>
