--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -479,3 +479,63 @@ footer .legal span {
 .new-review-form .standard-form {
   margin-top: 20px;
 }
+
+/* mobile webiste - iphone 6 plus size only */
+
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  
+  .container {
+    width: 400px;
+    margin: 0px;
+  }
+  
+  
+  .landing header.hero .headline {
+    padding: 110px 10px;
+  }
+  
+  .intro .title {
+    width: 400px;
+  }
+  
+  footer .contacts div {
+    width: 380px;
+    margin: 0 auto;
+    padding: 15px;
+  }
+  
+  footer .contacts {
+    display: block;
+  }
+  
+  .nav-links {
+    display: none;
+  }
+  
+  .m-nav-links #search {
+    margin-left: 15px;
+  }
+  
+  .mobile-nav {
+    line-height: 15px;
+    width: 414px;
+    background-color: #444;
+    padding: 10px;
+  }
+  
+  .mobile-nav span {
+    width: 126px;
+    text-align: center;
+    display: inline-block;
+  }
+  
+  .mobile-nav a {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  nav.nav-bar div {
+    line-height: 55px;
+  }
+}
