Add link to view pdf on google docs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
         <%end%>
       </ul>
     </div>
-  
+
     <div class="user-reviews">
       <h3>Reviews and Ratings</h3>
       <ul>
@@ -26,3 +26,6 @@
   </section>
 </section>
 
+<h2>Ikea Product</h2>
+<%=@product.product_name %>
+<a href="https://docs.google.com/gview?url=http://www.ikea.com<%=@product.pdf_path%>&embedded=true">Assembly Instructions</a>
