Change views to add new product information

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,9 @@
 <section class="padding-top container">
   <section class="manual-show">
-      <h1><%=@product.title%></h1>
+      <h1><%=@product.name%></h1>
+      <p class="product-model"><%=@product.model%></p>
+      <p><%=@product.title%></p>
+
       <div class="bookmark">
         <%if current_user%>
           <% if bookmark?(params[:id]) %>
@@ -10,6 +13,7 @@
           <%end%>
         <%end%>
       </div>
+
       <div class="product-info">
         <h3>Product details:</h3>
           <%if @product.image_url%>
@@ -19,9 +23,10 @@
           <%end%>
         <p><%=@product.description%></p>
       </div>
-      
       <br>
+      <p>Scroll down for PDF</p>
       <br>
+        <p><%=@product.pdf_url%></p>
       <div class="all-reviews-container">
         <%= render partial: "reviews/index", locals: {product: @product}%>
       </div>
@@ -36,4 +41,3 @@
       </div>
   </section>
 </section>
-
