--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,9 @@
 <section class="padding-top container">
   <section class="manual-show">
-      <h1><%=@product.name%></h1>
-      <p class="product-model"><%=@product.model%></p>
-      <p><%=@product.title%></p>
+      <h1 class="product-name"> <%=@product.name%></h1>
+      <p class="product-title"> <%=@product.title%></p>
+      <p class="product-model"> <%=@product.model%></p>
+
 
       <div class="bookmark">
         <%if current_user%>
@@ -15,18 +16,21 @@
       </div>
 
       <div class="product-info">
-        <h3>Product details:</h3>
           <%if @product.image_url%>
             <div class="product-image">
               <img src= <%=@product.image_url%> alt="No Product Image Available">
             </div>
           <%end%>
+          <h3>Product details:</h3>
         <p><%=@product.description%></p>
       </div>
       <br>
-      <p>Scroll down for PDF</p>
+      <p>Scroll down for PDF assembly instructions & product reviews</p>
       <br>
-        <p><%=@product.pdf_url%></p>
+        <iframe src="<%=@product.pdf_url%>"
+          width="100%" height="800" >
+          <p>Your browser does not support iframes.</p>
+        </iframe>
       <div class="all-reviews-container">
         <%= render partial: "reviews/index", locals: {product: @product}%>
       </div>
